force-app/main/default/objects/Account/fields/External_Source_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Source_Email__c</fullName>
    <label>External Source Email</label>
    <type>Email</type>
</CustomField>