force-app/main/default/objects/Account/fields/Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number__c</fullName>
    <externalId>true</externalId>
    <label>Identification Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>