force-app/main/default/objects/Account/recordTypes/Business_Unit.recordType-meta.xml
<RecordType>
    <fullName>Business_Unit</fullName>
    <active>true</active>
    <description>BetterBond Business Unit</description>
    <label>Business Unit</label>
</RecordType>