force-app/main/default/objects/Account/recordTypes/Developer_Agency.recordType-meta.xml
<RecordType>
    <fullName>Developer_Agency</fullName>
    <active>true</active>
    <description>Property Developer</description>
    <label>Developer Agency</label>
</RecordType>