force-app/main/default/objects/Account/recordTypes/Development.recordType-meta.xml
<RecordType>
    <fullName>Development</fullName>
    <active>true</active>
    <description>Housing Development</description>
    <label>Development</label>
</RecordType>