force-app/main/default/objects/Account/recordTypes/FinServ__IndustriesHousehold.recordType-meta.xml
<RecordType>
    <fullName>FinServ__IndustriesHousehold</fullName>
    <active>true</active>
    <description>A grouping of related people and institutions</description>
    <label>Household</label>
</RecordType>