force-app/main/default/objects/Account/recordTypes/Real_Estate_Agency.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_Agency</fullName>
    <active>true</active>
    <label>Real Estate Agency</label>
</RecordType>