force-app/main/default/objects/Account/recordTypes/Real_Estate_Branch.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_Branch</fullName>
    <active>true</active>
    <label>Real Estate Branch</label>
</RecordType>