force-app/main/default/objects/Account/recordTypes/Real_Estate_Network.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_Network</fullName>
    <active>true</active>
    <label>Real Estate Network</label>
</RecordType>