force-app/main/default/objects/Account/recordTypes/Region.recordType-meta.xml
<RecordType>
    <fullName>Region</fullName>
    <active>true</active>
    <description>BetterBond Region</description>
    <label>Region</label>
</RecordType>