force-app/main/default/objects/Account/recordTypes/Sub_Branch.recordType-meta.xml
<RecordType>
    <fullName>Sub_Branch</fullName>
    <active>true</active>
    <description>BetterBond Sub-Branch</description>
    <label>Sub-Branch</label>
</RecordType>