force-app/main/default/objects/Account/validationRules/BlockOnConsentRequirementsNotMet.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockOnConsentRequirementsNotMet</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ConsentRequirementsMet__c = false, Credit_check_complete__pc = true)</errorConditionFormula>
    <errorMessage>Consent Requirements not met, unable to proceed.</errorMessage>
</ValidationRule>