force-app/main/default/objects/Account/validationRules/Phone_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone, &quot;^(?:\\+\\d{2}|0)(\\d{6,14})&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Invalid phone number; please use the following format -
Example: +27739871234</errorMessage>
</ValidationRule>