force-app/main/default/objects/Account/listViews/Real_Estate_Agents.listView-meta.xml
<ListView>
    <fullName>Real_Estate_Agents</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Real_Estate_Agent</value>
    </filters>
    <label>Real Estate Agents</label>
</ListView>